# GPU-Programming-TUM

ex1/: .~lock.cuda.odt#  README.txt
ex10/: main.cu
ex10/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main  script.sh
ex14/: README.txt  cublas_v1  cublas_v1.cu  cublas_v2  cublas_v2.cu  custom_add  custom_add.cu  script.sh
ex15/: main.cu
ex15/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main  script.sh
ex2/: README.txt  addArrays  addArrays.cu  squareArray  squareArray.cu
ex3/: README.txt  main.cu
ex3/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main
ex4/: README.txt  main.cu
ex4/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main  script.sh
ex5/: README.txt  helper.cu  main.cu
ex5/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main  script.sh
ex6/: ANSWERS.txt  README.txt
ex6/global+const/: main.cu
ex6/global+const/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main
ex6/global+const/build_make/: Makefile
ex6/shared+const/: main.cu
ex6/shared+const/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main  script.sh
ex6/tex+const/: README.txt  main.cu
ex6/tex+const/build_cmake/: CMakeCache.txt  (+3 more)
ex7/: main.cu
ex7/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main  script.sh
ex8/: CMakeLists.txt  main.cu
ex8/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main  script.sh
ex9/: README.txt  answers.txt  helper.h  main.cu
ex9/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main  script.sh
